<resources>
    <string name="app_name">Schedulo</string>
    <string name="drawer_open">OpenDrawer</string>
    <string name="drawer_close">CloseDrawer</string>
    <string name="arrow_left">Previous Day</string>
    <string name="arrow_right">Next Day</string>
    <string name="sort_button">Sort By</string>

    <string name="due_sort">Due</string>
    <string name="assigned_sort">Assigned</string>
    <string name="class_sort">Class</string>

    <string name="drawer_greeting">Hey there,&#160;</string>
    <string name="drawer_email_placeholder">Hope you enjoy this app!</string>
    <string name="drawer_name_placeholder">user</string>

    <string name="html_test">
        <![CDATA[
        <h1>Main Title</h1>
        <h2>A sub-title</h2>
        <p>This is some html. Look, here\'s an <u>underline</u>.</p>
        <p>Look, this is <em>emphasized.</em> And here\'s some <b>bold</b>.</p>
        <p>This is a UL list:
        <ul>
        <li>One</li>
        <li>Two</li>
        <li>Three</li>
        </ul>
        <p>This is an OL list:
        <ol>
        <li>One</li>
        <li>Two</li>
        <li>Three</li>
        </ol>
        ]]>
    </string>

    <string name="drawer_schedule">Schedule</string>
    <string name="drawer_assignments">Assignments</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_settings">Settings</string>

    <string name="assignment_short_placeholder">Assignment</string>
    <string name="assignment_class_placeholder">Class</string>
    <string name="assignment_assigned_placeholder">Assigned</string>
    <string name="assignment_due_placeholder">Due</string>

    <string name="profile_personal_header">Personal Information</string>
    <string name="profile_personal_id_placeholder">Student ID</string>
    <string name="profile_personal_locker_placeholder">Locker Number</string>
    <string name="profile_personal_combo_placeholder">Locker Combination</string>

    <string name="settings_date_time_header">Date/Time Format</string>
    <string name="settings_date_title">Date format</string>
    <string name="settings_time_title">Time format</string>
    <string name="settings_log_out">Sign out</string>

    <string name="default_time_format">HH:mm</string>
    <string name="default_date_format">yyyy-MM-dd</string>

    <string name="short_credit">Made with ❤️ by Ishan Kamat</string>

</resources>
