<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:fontFamily="monospace"
        android:textStyle="italic"
        android:textColor="?android:textColorPrimary"
        android:textSize="28sp"
        android:paddingTop="48dp"
        android:paddingBottom="24dp"
        android:id="@+id/drawer_header_graphic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_greeting"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        android:paddingTop="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:id="@+id/drawer_header_greeting"
        android:layout_below="@+id/drawer_header_graphic"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_name_placeholder"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        android:paddingTop="0dp"
        android:paddingBottom="2dp"
        android:id="@+id/drawer_header_name"
        android:layout_below="@+id/drawer_header_graphic"
        android:layout_toEndOf="@+id/drawer_header_greeting"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawer_email_placeholder"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@id/drawer_header_name"
        android:id="@+id/drawer_header_email"/>

</RelativeLayout>