<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/settings_date_time_header"
    android:paddingTop="16dp"
    android:paddingBottom="0dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:textSize="14sp"
    android:textColor="@color/colorAccent"
    android:textStyle="bold"
    />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.7"
            android:orientation="vertical"
            android:id="@+id/time_box_button_sep"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_time_box"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/time_box_button_sep"
            android:hint="@string/settings_time_title"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_time_button"
            app:layout_constraintLeft_toLeftOf="@+id/time_box_button_sep"
            app:layout_constraintRight_toRightOf="parent"
            android:text="apply"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/default_time_format"
        android:id="@+id/settings_time_preview"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.7"
            android:orientation="vertical"
            android:id="@+id/date_box_button_sep"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_date_box"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/date_box_button_sep"
            android:hint="@string/settings_date_title"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_date_button"
            app:layout_constraintLeft_toLeftOf="@+id/date_box_button_sep"
            app:layout_constraintRight_toRightOf="parent"
            android:text="apply"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/default_date_format"
        android:id="@+id/settings_date_preview"/>


</LinearLayout>