<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_swipe_refresh_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_photo_cardview">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="24dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textSize="24sp"
                        android:textColor="?android:textColorPrimary"
                        android:id="@+id/profile_photo_title"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_photo_photo"
                        android:layout_below="@+id/profile_photo_title"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="?android:textColorPrimary"
                        android:paddingTop="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="24dp"
                        android:layout_below="@+id/profile_photo_photo"
                        android:id="@+id/profile_photo_caption"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_personal_cardview"
                android:layout_below="@+id/profile_photo_cardview"
                android:layout_marginTop="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_personal_header"
                        android:textSize="24sp"
                        android:paddingTop="16dp"
                        android:paddingBottom="0dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/profile_personal_header"
                        android:textColor="?android:textColorPrimary"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profile_personal_header"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_personal_id_label"
                            android:text="@string/profile_personal_id_placeholder"
                            android:textStyle="bold"
                            android:layout_alignParentStart="true"
                            android:paddingBottom="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_personal_id_info"
                            android:text="@string/profile_personal_id_placeholder"
                            android:layout_alignParentEnd="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_personal_locker_label"
                            android:text="@string/profile_personal_locker_placeholder"
                            android:textStyle="bold"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/profile_personal_id_label"
                            android:paddingBottom="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_personal_locker_info"
                            android:text="@string/profile_personal_locker_placeholder"
                            android:layout_alignParentEnd="true"
                            android:layout_below="@+id/profile_personal_id_label"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_personal_combo_label"
                            android:text="@string/profile_personal_combo_placeholder"
                            android:textStyle="bold"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/profile_personal_locker_label"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_personal_combo_info"
                            android:text="@string/profile_personal_combo_placeholder"
                            android:layout_alignParentEnd="true"
                            android:layout_below="@+id/profile_personal_locker_label"/>

                    </RelativeLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>